fix: overflow

--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -350,7 +350,6 @@
 @include breakpoint-up(md) {
   .nav {
     height: rem(80);
-    margin-right: rem(-20);
   }
 
   .nav .menu-toggle {
